--- a/views/layouts/main-logged-in.hbs
+++ b/views/layouts/main-logged-in.hbs
@@ -26,7 +26,7 @@
 </head>
 <body>
 <header class=" position-relative z-2000">
-    {{> nav}}
+    {{> nav-logged-in}}
 </header>
 {{!-- <main class="p-3"> --}}
     {{{body}}}
