--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,5 @@
+.fw-500 { font-weight: 500; }
+
 .navbar-nav {
     flex-direction: row !important;
     flex: 1;
@@ -75,7 +77,7 @@
 } */
 
 .modal {
-    display: none;
+    /* display: none; */
     position: absolute;
     top: 0;
     left: 0;
