--- a/views/queue.hbs
+++ b/views/queue.hbs
@@ -1,6 +1,6 @@
 <h2>Queue</h2>
 
-{{!-- <a href="venue/{{qry.venue}}" class="btn btn-primary">Purchase</a> --}}
+<a href="venue/{{queryVenue}}" class="btn btn-primary">Purchase</a>
 
 <script type="module">
     import { parseArray } from '/js/array-functions.mjs'
