--- a/public/styles.css
+++ b/public/styles.css
@@ -82,10 +82,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    overflow: scroll;
 }
 
 #increase-tickets + p {
