--- a/public/views/select-seats.hbs
+++ b/public/views/select-seats.hbs
@@ -7,6 +7,7 @@
     <hr>
 
     <div class="container row m-auto p-0">
+    {{!-- <div class="d-flex m-auto p-0"> --}}
 
         <div class="col-6">
             <p class="comment">seat map/view goes here</p>
@@ -42,15 +43,17 @@
             Purchase
         </button>
     </form>
+    </div>
 
     <hr  class="mt-3 mb-1">
     <p class="text-center my-2">No suitable tickets? Sign up for the waiting list to recieve a notification when more tickets are released:</p>
     <form action="/events/tour/{{tourID}}/waiting-list" method="get" class="d-block text-center">
         <input name="venue" value="{{venueID}}" hidden>
-            <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
+        <input name="dates" hidden>
+        <button class="btn btn-secondary col-4 m-auto">Waiting List</button>
     </form>
 
-    </div>
+    {{!-- </div> --}}
 
     
 </div>
