--- a/views/events/purchase-page.hbs
+++ b/views/events/purchase-page.hbs
@@ -38,14 +38,14 @@
 
 <footer class="fixed-bottom d-flex justify-content-center align-items-center py-2 bg-secondary">
     <p class="my-0 me-1 text-white">Don't see anything you like?</p>
-    <form id="#waiting-list-form-footer" action="/events/tour/{{tour.tour_id}}/waiting-list" method="get">
+    <form id="waiting-list-form-footer" action="/events/tour/{{tour.tour_id}}/waiting-list" method="get">
         <input name="venue" value="{{venue.venue_id}}" hidden>
         <input name="dates" hidden>
         <button class="btn btn-dark ms-1">Join the waiting List</button>
     </form>
 </footer>
 
-{{log isSaleSlot}}
+{{log isSlotSale}}
 
 <meta name="user-id" content="{{req.user.user_id}}">
 <meta name="tour-id" content="{{tour.tour_id}}">
